create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -781,6 +781,184 @@ a {
 .cid-uEudm3kYml .content-head {
   max-width: 800px;
 }
+.cid-uEumJO9L85 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #edefeb;
+}
+.cid-uEumJO9L85 .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uEumJO9L85 .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-uEumJO9L85 .mbr-text {
+  color: #000000;
+}
+.cid-uEumJO9L85 .mbr-section-subtitle {
+  color: #ffffff;
+  text-align: left;
+}
+.cid-uEumJO9L85 .item-wrapper {
+  background: #ffffff;
+  padding: 2.25rem 2.25rem 1rem 2.25rem;
+}
+@media (max-width: 767px) {
+  .cid-uEumJO9L85 .item-wrapper {
+    padding: 2rem 1.5rem 0.5rem 1.5rem;
+  }
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-uEumJO9L85 .item-wrapper {
+    padding: 2rem 1.5rem 0.5rem 1.5rem;
+  }
+}
+.cid-uEumJO9L85 .main-button {
+  margin-bottom: 2rem;
+}
+@media (max-width: 767px) {
+  .cid-uEumJO9L85 .main-button {
+    margin-bottom: 2rem;
+  }
+}
+.cid-uEumJO9L85 .counter-container ul {
+  margin: 0;
+  padding-left: 2.25rem;
+  list-style: none;
+}
+.cid-uEumJO9L85 .counter-container ul li {
+  position: relative;
+  list-style: none;
+  margin-bottom: 2rem;
+}
+.cid-uEumJO9L85 .counter-container ul li:before {
+  position: absolute;
+  left: -1.5em;
+  content: "";
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #ff0303;
+  background-color: #ff0303;
+  width: 0.5em;
+  height: 0.5em;
+  top: 0.4em;
+  border-radius: 50%;
+}
+.cid-uEumJO9L85 .counter-container ol {
+  margin-bottom: 0;
+  padding-left: 2.25rem;
+  counter-reset: myCounter;
+}
+.cid-uEumJO9L85 .counter-container ol li {
+  margin-bottom: 2rem;
+  list-style: none;
+  position: relative;
+}
+.cid-uEumJO9L85 .counter-container ol li:before {
+  font-weight: 700;
+  position: absolute;
+  left: -1.5em;
+  counter-increment: myCounter;
+  content: counter(myCounter);
+  transition: all .2s;
+  color: #ff0303;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-uEumJO9L85 .mbr-text UL {
+  text-align: left;
+}
+.cid-uEumJO9L85 .mbr-section-subtitle,
+.cid-uEumJO9L85 .main-button {
+  color: #000000;
+}
+.cid-uEumTWHUbS {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background: #edefeb;
+}
+.cid-uEumTWHUbS .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-uEumTWHUbS .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 992px) {
+  .cid-uEumTWHUbS .row .map-wrapper {
+    margin-top: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uEumTWHUbS .row .map-wrapper {
+    margin-top: 1rem;
+  }
+}
+.cid-uEumTWHUbS .google-map {
+  height: 100%;
+  position: relative;
+}
+.cid-uEumTWHUbS .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+@media (max-width: 992px) {
+  .cid-uEumTWHUbS .google-map iframe {
+    min-height: 350px;
+  }
+}
+.cid-uEumTWHUbS .google-map [data-state-details] {
+  color: #6b6763;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-uEumTWHUbS .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-uEumTWHUbS .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-uEumTWHUbS .card-wrapper {
+  padding: 2.25rem;
+  background: #ffffff;
+}
+@media (min-width: 992px) and (max-width: 1200px) {
+  .cid-uEumTWHUbS .card-wrapper {
+    padding: 1.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-uEumTWHUbS .card-wrapper {
+    padding: 2rem 1.5rem;
+  }
+}
+.cid-uEumTWHUbS ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+.cid-uEumTWHUbS .content-head {
+  max-width: 800px;
+}
 .cid-tJS9NNcTLZ {
   padding-top: 6rem;
   padding-bottom: 6rem;
