create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -146,7 +146,7 @@ body {
   border-radius: 4px;
 }
 .bg-primary {
-  background-color: #c04652 !important;
+  background-color: #757b62 !important;
 }
 .bg-success {
   background-color: #f7f7f7 !important;
@@ -162,8 +162,8 @@ body {
 }
 .btn-primary,
 .btn-primary:active {
-  background-color: #c04652 !important;
-  border-color: #c04652 !important;
+  background-color: #757b62 !important;
+  border-color: #757b62 !important;
   color: #ffffff !important;
   box-shadow: none;
 }
@@ -172,15 +172,15 @@ body {
 .btn-primary.focus,
 .btn-primary.active {
   color: inherit;
-  background-color: #cd6c76 !important;
-  border-color: #cd6c76 !important;
+  background-color: #8f957b !important;
+  border-color: #8f957b !important;
   box-shadow: none;
 }
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff !important;
-  background-color: #cd6c76 !important;
-  border-color: #cd6c76 !important;
+  background-color: #8f957b !important;
+  border-color: #8f957b !important;
 }
 .btn-secondary,
 .btn-secondary:active {
@@ -339,23 +339,23 @@ body {
 .btn-primary-outline,
 .btn-primary-outline:active {
   background-color: transparent !important;
-  border-color: #c04652;
-  color: #c04652;
+  border-color: #757b62;
+  color: #757b62;
 }
 .btn-primary-outline:hover,
 .btn-primary-outline:focus,
 .btn-primary-outline.focus,
 .btn-primary-outline.active {
-  color: #832d35 !important;
+  color: #474b3c !important;
   background-color: transparent !important;
-  border-color: #832d35 !important;
+  border-color: #474b3c !important;
   box-shadow: none !important;
 }
 .btn-primary-outline.disabled,
 .btn-primary-outline:disabled {
   color: #ffffff !important;
-  background-color: #c04652 !important;
-  border-color: #c04652 !important;
+  background-color: #757b62 !important;
+  border-color: #757b62 !important;
 }
 .btn-secondary-outline,
 .btn-secondary-outline:active {
@@ -505,7 +505,7 @@ body {
   border-color: #fafafa !important;
 }
 .text-primary {
-  color: #c04652 !important;
+  color: #757b62 !important;
 }
 .text-secondary {
   color: #ff0303 !important;
@@ -531,7 +531,7 @@ body {
 a.text-primary:hover,
 a.text-primary:focus,
 a.text-primary.active {
-  color: #772930 !important;
+  color: #3f4235 !important;
 }
 a.text-secondary:hover,
 a.text-secondary:focus,
@@ -577,7 +577,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-position: 0 1.2em;
 }
 .nav-tabs .nav-link.active {
-  color: #c04652;
+  color: #757b62;
 }
 .nav-tabs .nav-link:not(.active) {
   color: #232323;
@@ -601,8 +601,8 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   border-radius: 100px !important;
 }
 .mbr-gallery-filter li.active .btn {
-  background-color: #c04652;
-  border-color: #c04652;
+  background-color: #757b62;
+  border-color: #757b62;
   color: #ffffff;
 }
 .mbr-gallery-filter li.active .btn:focus {
@@ -613,11 +613,11 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
 }
 a,
 a:hover {
-  color: #c04652;
+  color: #757b62;
 }
 .mbr-plan-header.bg-primary .mbr-plan-subtitle,
 .mbr-plan-header.bg-primary .mbr-plan-price-desc {
-  color: #e0a5ab;
+  color: #b3b7a5;
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
@@ -652,7 +652,7 @@ a:hover {
 .form-control:hover,
 .form-control:focus {
   box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px 0px, rgba(0, 0, 0, 0.07) 0px 1px 3px 0px, rgba(0, 0, 0, 0.03) 0px 0px 0px 1px;
-  border-color: #c04652 !important;
+  border-color: #757b62 !important;
 }
 .form-control:-webkit-input-placeholder {
   font-family: 'Inter Tight', sans-serif;
@@ -664,7 +664,7 @@ a:hover {
   font-size: 1.75rem;
 }
 blockquote {
-  border-color: #c04652;
+  border-color: #757b62;
 }
 /* Forms */
 .mbr-form .input-group-btn .btn {
@@ -682,14 +682,14 @@ blockquote {
 }
 .jq-selectbox li:hover,
 .jq-selectbox li.selected {
-  background-color: #c04652;
+  background-color: #757b62;
   color: #ffffff;
 }
 .jq-number__spin {
   transition: 0.25s ease;
 }
 .jq-number__spin:hover {
-  border-color: #c04652;
+  border-color: #757b62;
 }
 .jq-selectbox .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:after,
@@ -701,14 +701,14 @@ blockquote {
 .jq-selectbox:hover .jq-selectbox__trigger-arrow,
 .jq-number__spin.minus:hover:after,
 .jq-number__spin.plus:hover:after {
-  border-top-color: #c04652;
-  border-bottom-color: #c04652;
+  border-top-color: #757b62;
+  border-bottom-color: #757b62;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_default,
 .xdsoft_datetimepicker .xdsoft_calendar td.xdsoft_current,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div.xdsoft_current {
   color: #ffffff !important;
-  background-color: #c04652 !important;
+  background-color: #757b62 !important;
   box-shadow: none !important;
 }
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
@@ -739,7 +739,7 @@ iframe.lazy-placeholder,
   top: 50%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23c04652' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='32' height='32' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg' stroke='%23757b62' %3e%3cg fill='none' fill-rule='evenodd'%3e%3cg transform='translate(16 16)' stroke-width='2'%3e%3ccircle stroke-opacity='.5' cx='16' cy='16' r='16'/%3e%3cpath d='M32 16c0-9.94-8.06-16-16-16'%3e%3canimateTransform attributeName='transform' type='rotate' from='0 16 16' to='360 16 16' dur='1s' repeatCount='indefinite'/%3e%3c/path%3e%3c/g%3e%3c/g%3e%3c/svg%3e");
 }
 section.lazy-placeholder:after {
   opacity: 0.5;
@@ -1667,262 +1667,6 @@ a {
 .cid-uGgjbUlNA1 .mbr-text {
   color: #000000;
 }
-.cid-uEuGDUwpzM {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-  background-color: #edefeb;
-}
-.cid-uEuGDUwpzM .item {
-  margin-bottom: 2rem;
-}
-@media (max-width: 767px) {
-  .cid-uEuGDUwpzM .item {
-    margin-bottom: 1rem;
-  }
-}
-.cid-uEuGDUwpzM .item-wrapper {
-  position: relative;
-}
-.cid-uEuGDUwpzM .item-wrapper .icon-wrapper {
-  pointer-events: none;
-  position: absolute;
-  width: 60px;
-  height: 60px;
-  font-size: 22px;
-  left: 50%;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border: 2px solid transparent;
-  border-radius: 50%;
-  opacity: 0;
-  color: #464845 !important;
-  transform: translateX(-50%) translateY(-50%);
-  background-color: #edefea !important;
-  transition: 0.2s;
-}
-.cid-uEuGDUwpzM .item-wrapper:hover .icon-wrapper {
-  opacity: 1;
-}
-.cid-uEuGDUwpzM .carousel-control,
-.cid-uEuGDUwpzM .close {
-  background: #1b1b1b;
-}
-.cid-uEuGDUwpzM .carousel-control-prev {
-  margin-left: 2.5rem;
-}
-.cid-uEuGDUwpzM .carousel-control-prev span {
-  margin-right: 5px;
-}
-.cid-uEuGDUwpzM .carousel-control-next {
-  margin-right: 2.5rem;
-}
-.cid-uEuGDUwpzM .carousel-control-next span {
-  margin-left: 5px;
-}
-.cid-uEuGDUwpzM .close {
-  position: fixed;
-  opacity: 0.5;
-  font-size: 22px;
-  font-weight: 300;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  color: #fff;
-  top: 2.5rem;
-  right: 2.5rem;
-  border: 2px solid #fff;
-  text-shadow: none;
-  z-index: 5;
-  transition: opacity 0.3s ease;
-  font-family: 'Moririse2';
-  align-items: center;
-  justify-content: center;
-  display: flex;
-}
-.cid-uEuGDUwpzM .close::before {
-  content: '\e91a';
-}
-.cid-uEuGDUwpzM .close:hover {
-  opacity: 1;
-  background: #000;
-  color: #fff;
-}
-.cid-uEuGDUwpzM .carousel-control {
-  display: flex;
-  top: 50%;
-  width: 60px;
-  height: 60px;
-  margin-top: -1.5rem;
-  font-size: 22px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all 0.3s;
-}
-.cid-uEuGDUwpzM .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-uEuGDUwpzM .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-@media (max-width: 767px) {
-  .cid-uEuGDUwpzM .carousel-control {
-    top: auto;
-    bottom: 1rem;
-  }
-}
-.cid-uEuGDUwpzM .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 3px;
-}
-.cid-uEuGDUwpzM .carousel-indicators li {
-  max-width: 15px;
-  height: 15px;
-  width: 15px;
-  max-height: 15px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: 0.5;
-  transition: all 0.3s;
-}
-.cid-uEuGDUwpzM .carousel-indicators li.active,
-.cid-uEuGDUwpzM .carousel-indicators li:hover {
-  opacity: 0.9;
-}
-.cid-uEuGDUwpzM .carousel-indicators li::after,
-.cid-uEuGDUwpzM .carousel-indicators li::before {
-  content: none;
-}
-.cid-uEuGDUwpzM .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 768px) {
-  .cid-uEuGDUwpzM .carousel-indicators {
-    display: none !important;
-  }
-}
-@media (max-width: 991px) {
-  .cid-uEuGDUwpzM .carousel-indicators {
-    margin-bottom: 3.625rem !important;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
-  }
-}
-@media (max-width: 767px) {
-  .cid-uEuGDUwpzM .carousel-indicators {
-    display: none;
-  }
-}
-.cid-uEuGDUwpzM .carousel-inner {
-  display: flex;
-  align-items: center;
-}
-.cid-uEuGDUwpzM .carousel-inner > .active {
-  display: block;
-}
-.cid-uEuGDUwpzM .carousel-control.left {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-uEuGDUwpzM .carousel-control.right {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-uEuGDUwpzM .carousel-control:hover {
-  background: #1b1b1b;
-  color: #fff;
-  opacity: 1;
-}
-@media (max-width: 768px) {
-  .cid-uEuGDUwpzM .carousel-control,
-  .cid-uEuGDUwpzM .carousel-indicators,
-  .cid-uEuGDUwpzM .modal .close {
-    position: fixed;
-  }
-}
-@media (max-width: 767px) {
-  .cid-uEuGDUwpzM .mbr-slider .carousel-control {
-    top: auto;
-    bottom: 20px;
-  }
-  .cid-uEuGDUwpzM .mbr-slider > .container .carousel-control {
-    margin-bottom: 0;
-  }
-}
-.cid-uEuGDUwpzM .carousel-indicators .active,
-.cid-uEuGDUwpzM .carousel-indicators li {
-  width: 7px;
-  height: 7px;
-  margin: 3px;
-  background: #000000;
-  opacity: 0.5;
-  border: 4px solid #000000;
-}
-.cid-uEuGDUwpzM .carousel-indicators .active {
-  background: #fff;
-}
-.cid-uEuGDUwpzM .carousel-indicators li {
-  max-width: 15px;
-  max-height: 15px;
-  border-radius: 50%;
-}
-.cid-uEuGDUwpzM .modal {
-  padding-left: 0 !important;
-  position: fixed;
-  overflow: hidden;
-  padding-right: 0 !important;
-}
-.cid-uEuGDUwpzM .modal-dialog {
-  margin: 0 auto;
-  max-width: 100%;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-.cid-uEuGDUwpzM .modal-content {
-  border-radius: 0;
-  border: none;
-  background: transparent;
-}
-.cid-uEuGDUwpzM .modal-body {
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-.cid-uEuGDUwpzM .modal-body img {
-  width: 100%;
-  object-fit: contain;
-  max-height: calc(100vh - 1.75rem);
-}
-.cid-uEuGDUwpzM .carousel {
-  width: 100%;
-}
-.cid-uEuGDUwpzM .modal-backdrop.in {
-  opacity: 0.8;
-}
-.cid-uEuGDUwpzM .modal.fade .modal-dialog {
-  transition: margin-top 0.3s ease-out;
-}
-.cid-uEuGDUwpzM .modal.fade .modal-dialog,
-.cid-uEuGDUwpzM .modal.in .modal-dialog {
-  transform: none;
-}
-.cid-uEuGDUwpzM .mbr-gallery .item-wrapper {
-  cursor: pointer;
-}
-.cid-uEuGDUwpzM .content-head {
-  max-width: 800px;
-}
 .cid-uEumTWHUbS {
   padding-top: 5rem;
   padding-bottom: 5rem;
@@ -2005,7 +1749,7 @@ a {
 .cid-tJS9NNcTLZ {
   padding-top: 0rem;
   padding-bottom: 4rem;
-  background-color: #ff0303;
+  background-color: #757b62;
 }
 @media (max-width: 991px) {
   .cid-tJS9NNcTLZ .container {
@@ -5041,7 +4785,7 @@ a {
   border-bottom: 1px solid #c1c1c1 !important;
 }
 .cid-uGfZKkhO7N .dragArea.row .form-group .form-control::placeholder {
-  color: #c04652;
+  color: #757b62;
   opacity: .7;
 }
 .cid-uGfZKkhO7N .dragArea.row .form-group textarea {
@@ -5053,11 +4797,11 @@ a {
 }
 .cid-uGfZKkhO7N .dragArea.row .form-group .form-check .form-check-input {
   background-color: #000000;
-  border-color: #c04652;
+  border-color: #757b62;
   border-radius: 0;
 }
 .cid-uGfZKkhO7N .dragArea.row .form-group .form-check .form-check-input:focus {
-  background-color: #c04652;
+  background-color: #757b62;
 }
 .cid-uGfZKkhO7N .dragArea.row .mbr-section-btn {
   width: 100%;
@@ -8428,7 +8172,7 @@ a {
 .cid-tJS9NNcTLZ {
   padding-top: 0rem;
   padding-bottom: 4rem;
-  background-color: #ff0303;
+  background-color: #757b62;
 }
 @media (max-width: 991px) {
   .cid-tJS9NNcTLZ .container {
@@ -9693,7 +9437,7 @@ a {
 .cid-tJS9NNcTLZ {
   padding-top: 0rem;
   padding-bottom: 4rem;
-  background-color: #ff0303;
+  background-color: #757b62;
 }
 @media (max-width: 991px) {
   .cid-tJS9NNcTLZ .container {
